tests/ui/invalid-modifier.rs
fn main() {
    crokey::key!(control-c);
}
